--- a/FinalProject/app/src/debug/res/values/google_maps_api.xml
+++ b/FinalProject/app/src/debug/res/values/google_maps_api.xml
@@ -4,15 +4,15 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=63:3E:04:01:57:6D:80:D7:A1:CA:23:74:B2:1A:15:3F:86:C5:36:76%3Bcom.comp3617.finalproject
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=C7:79:6D:71:B9:AA:3A:FF:9F:0E:DB:5F:0C:59:8C:37:75:8A:F5:96%3Bcom.comp3617.finalproject
 
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    63:3E:04:01:57:6D:80:D7:A1:CA:23:74:B2:1A:15:3F:86:C5:36:76
+    C7:79:6D:71:B9:AA:3A:FF:9F:0E:DB:5F:0C:59:8C:37:75:8A:F5:96
 
     SHA-1 certificate fingerprint:
-    63:3E:04:01:57:6D:80:D7:A1:CA:23:74:B2:1A:15:3F:86:C5:36:76
+    C7:79:6D:71:B9:AA:3A:FF:9F:0E:DB:5F:0C:59:8C:37:75:8A:F5:96
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -20,5 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCJ9dwr7_6ix2SJwnayZKXBbVNBsJQlf0g</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        AIzaSyCJ9dwr7_6ix2SJwnayZKXBbVNBsJQlf0g
+    </string>
 </resources>
