update result view, my current location on map

--- a/FinalProject/app/src/main/res/layout/fragment_stats.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_stats.xml
@@ -58,7 +58,8 @@
             android:layout_marginTop="14dp"
             android:background="@color/statsBtn"
             android:text="START WORKOUT"
-            android:textColor="#FFFFFF"
+            android:textColor="@drawable/start_click"
+            android:clickable="true"
             android:textStyle="bold" />
     </RelativeLayout>
 
