--- a/FinalProject/app/src/main/res/layout/activity_result.xml
+++ b/FinalProject/app/src/main/res/layout/activity_result.xml
@@ -82,13 +82,13 @@
             android:paddingLeft="5dp">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/result_durationLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Duration" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/result_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="00:00:00" />
@@ -101,14 +101,14 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/result_averageSpeedLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Average Speed" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/result_averageSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -123,17 +123,17 @@
             android:paddingRight="5dp">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/result_distanceLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:text="Distance" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/result_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 tools:text="0.0 km" />
         </LinearLayout>
     </LinearLayout>
@@ -143,8 +143,8 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
+            android:id="@+id/result_saveBtn"
+            android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="5dp"
