--- a/FinalProject/app/src/main/res/values/styles.xml
+++ b/FinalProject/app/src/main/res/values/styles.xml
@@ -7,10 +7,18 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="bottomBarTextView" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:textSize">10dp</item>
     </style>
+
     <style name="Theme.Default" parent="@android:style/Theme"></style>
+
     <style name="Theme.NoTitle" parent="@android:style/Theme.NoTitleBar"></style>
+
     <style name="Theme.FullScreen" parent="@android:style/Theme.NoTitleBar.Fullscreen"></style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
