--- a/FinalProject/app/src/main/res/layout/fragment_result_map.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_result_map.xml
@@ -5,7 +5,7 @@
     tools:context="com.comp3617.finalproject.ResultMapFragment">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/map"
+        android:id="@+id/map_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
