--- a/FinalProject/app/src/main/res/layout/activity_check_gps.xml
+++ b/FinalProject/app/src/main/res/layout/activity_check_gps.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/checkGPS_icon"
+        android:contentDescription="@string/checkGPS_imgDesc"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:srcCompat="@drawable/ic_location"
