--- a/FinalProject/app/src/main/res/layout/activity_result.xml
+++ b/FinalProject/app/src/main/res/layout/activity_result.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +18,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:gravity="start"
-            android:text="Discard"
+            android:text="@string/result_discard"
             android:textColor="@drawable/discard_click" />
 
         <TextView
@@ -27,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Result"
+            android:text="@string/result_result"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -50,7 +49,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name" />
+            android:text="@string/result_name"
+            android:labelFor="@+id/result_workoutName"/>
 
         <EditText
             android:id="@+id/result_workoutName"
@@ -71,6 +71,7 @@
         tools:layout="@layout/fragment_result_map"/>
 
     <LinearLayout
+        android:baselineAligned="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -81,13 +82,14 @@
             android:layout_height="match_parent"
             android:layout_weight="0.33"
             android:orientation="vertical"
-            android:paddingLeft="5dp">
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp">
 
             <TextView
                 android:id="@+id/result_durationLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Duration" />
+                android:text="@string/result_duration" />
 
             <TextView
                 android:id="@+id/result_duration"
@@ -107,7 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Average Speed" />
+                android:text="@string/result_averageSpeed" />
 
             <TextView
                 android:id="@+id/result_averageSpeed"
@@ -122,14 +124,16 @@
             android:layout_height="match_parent"
             android:layout_weight="0.33"
             android:orientation="vertical"
-            android:paddingRight="5dp">
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
+            >
 
             <TextView
                 android:id="@+id/result_distanceLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="Distance" />
+                android:text="@string/result_distance" />
 
             <TextView
                 android:id="@+id/result_distance"
@@ -155,7 +159,7 @@
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:background="#4c97fa"
-            android:text="SAVE THIS WORKOUT"
+            android:text="@string/stats_startWorkout"
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
     </LinearLayout>
