--- a/FinalProject/app/src/main/res/layout/list_prototype_layout.xml
+++ b/FinalProject/app/src/main/res/layout/list_prototype_layout.xml
@@ -17,11 +17,11 @@
 
         <TextView
             android:id="@+id/list_deleteBtn"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Delete"
+            android:text="@string/list_delete"
             android:textColor="@color/white"
             android:textSize="21sp" />
     </LinearLayout>
@@ -36,6 +36,7 @@
 
         <ImageView
             android:id="@+id/bikeIcon"
+            android:contentDescription="@string/list_imageDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -74,10 +75,11 @@
             android:id="@+id/list_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
+            android:layout_marginEnd="7dp"
             tools:text="2017-01-01 0:00 AM"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            tools:ignore="RelativeOverlap" />
     </RelativeLayout>
     <!-- Surface View End -->
 </com.daimajia.swipe.SwipeLayout>
